--- a/Oefening_4_Word2Vec_word_embeddings.ipynb
+++ b/Oefening_4_Word2Vec_word_embeddings.ipynb
@@ -66,212 +66,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# We need to downgrade to python 3.7 for backward compatibility with gensim\n",
-        "\n",
-        "!sudo apt-get update -y\n",
-        "!sudo apt-get install python3.7\n",
-        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 1\n",
-        "!sudo update-alternatives --config python3\n",
-        "!sudo update-alternatives --config python3\n",
-        "!apt-get install python3-pip\n",
-        "!sudo apt install python3.7-distutils\n",
-        "!python -m pip install --upgrade pip --user"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JS0FN3pk7qpv",
-        "outputId": "e7217afb-2184-48b7-891d-0666cb544b48"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
-            "Get:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease [1,581 B]\n",
-            "Get:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  Packages [556 kB]\n",
-            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "Get:5 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\n",
-            "Hit:7 https://ppa.launchpadcontent.net/c2d4u.team/c2d4u4.0+/ubuntu jammy InRelease\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [109 kB]\n",
-            "Get:9 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [1,131 kB]\n",
-            "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,274 kB]\n",
-            "Get:11 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease [18.1 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [1,398 kB]\n",
-            "Get:13 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [1,009 kB]\n",
-            "Get:14 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease [24.3 kB]\n",
-            "Hit:15 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
-            "Get:16 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 Packages [27.7 kB]\n",
-            "Get:17 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy/main amd64 Packages [40.1 kB]\n",
-            "Fetched 5,821 kB in 7s (860 kB/s)\n",
-            "Reading package lists... Done\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libpython3.7-minimal libpython3.7-stdlib mailcap mime-support\n",
-            "  python3.7-minimal\n",
-            "Suggested packages:\n",
-            "  python3.7-venv binfmt-support\n",
-            "The following NEW packages will be installed:\n",
-            "  libpython3.7-minimal libpython3.7-stdlib mailcap mime-support python3.7\n",
-            "  python3.7-minimal\n",
-            "0 upgraded, 6 newly installed, 0 to remove and 22 not upgraded.\n",
-            "Need to get 4,698 kB of archives.\n",
-            "After this operation, 17.8 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 mailcap all 3.70+nmu1ubuntu1 [23.8 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy/main amd64 mime-support all 3.66 [3,696 B]\n",
-            "Get:3 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 libpython3.7-minimal amd64 3.7.17-1+jammy1 [608 kB]\n",
-            "Get:4 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 python3.7-minimal amd64 3.7.17-1+jammy1 [1,837 kB]\n",
-            "Get:5 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 libpython3.7-stdlib amd64 3.7.17-1+jammy1 [1,864 kB]\n",
-            "Get:6 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 python3.7 amd64 3.7.17-1+jammy1 [362 kB]\n",
-            "Fetched 4,698 kB in 9s (511 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 6.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package libpython3.7-minimal:amd64.\n",
-            "(Reading database ... 120874 files and directories currently installed.)\n",
-            "Preparing to unpack .../0-libpython3.7-minimal_3.7.17-1+jammy1_amd64.deb ...\n",
-            "Unpacking libpython3.7-minimal:amd64 (3.7.17-1+jammy1) ...\n",
-            "Selecting previously unselected package python3.7-minimal.\n",
-            "Preparing to unpack .../1-python3.7-minimal_3.7.17-1+jammy1_amd64.deb ...\n",
-            "Unpacking python3.7-minimal (3.7.17-1+jammy1) ...\n",
-            "Selecting previously unselected package mailcap.\n",
-            "Preparing to unpack .../2-mailcap_3.70+nmu1ubuntu1_all.deb ...\n",
-            "Unpacking mailcap (3.70+nmu1ubuntu1) ...\n",
-            "Selecting previously unselected package mime-support.\n",
-            "Preparing to unpack .../3-mime-support_3.66_all.deb ...\n",
-            "Unpacking mime-support (3.66) ...\n",
-            "Selecting previously unselected package libpython3.7-stdlib:amd64.\n",
-            "Preparing to unpack .../4-libpython3.7-stdlib_3.7.17-1+jammy1_amd64.deb ...\n",
-            "Unpacking libpython3.7-stdlib:amd64 (3.7.17-1+jammy1) ...\n",
-            "Selecting previously unselected package python3.7.\n",
-            "Preparing to unpack .../5-python3.7_3.7.17-1+jammy1_amd64.deb ...\n",
-            "Unpacking python3.7 (3.7.17-1+jammy1) ...\n",
-            "Setting up libpython3.7-minimal:amd64 (3.7.17-1+jammy1) ...\n",
-            "Setting up python3.7-minimal (3.7.17-1+jammy1) ...\n",
-            "Setting up mailcap (3.70+nmu1ubuntu1) ...\n",
-            "Setting up mime-support (3.66) ...\n",
-            "Setting up libpython3.7-stdlib:amd64 (3.7.17-1+jammy1) ...\n",
-            "Setting up python3.7 (3.7.17-1+jammy1) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "update-alternatives: using /usr/bin/python3.7 to provide /usr/bin/python3 (python3) in auto mode\n",
-            "There is only one alternative in link group python3 (providing /usr/bin/python3): /usr/bin/python3.7\n",
-            "Nothing to configure.\n",
-            "There is only one alternative in link group python3 (providing /usr/bin/python3): /usr/bin/python3.7\n",
-            "Nothing to configure.\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  python3-setuptools python3-wheel\n",
-            "Suggested packages:\n",
-            "  python-setuptools-doc\n",
-            "The following NEW packages will be installed:\n",
-            "  python3-pip python3-setuptools python3-wheel\n",
-            "0 upgraded, 3 newly installed, 0 to remove and 22 not upgraded.\n",
-            "Need to get 1,677 kB of archives.\n",
-            "After this operation, 8,965 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 python3-setuptools all 59.6.0-1.2ubuntu0.22.04.1 [339 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 python3-wheel all 0.37.1-2ubuntu0.22.04.1 [32.0 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 python3-pip all 22.0.2+dfsg-1ubuntu0.3 [1,305 kB]\n",
-            "Fetched 1,677 kB in 2s (805 kB/s)\n",
-            "Selecting previously unselected package python3-setuptools.\n",
-            "(Reading database ... 121519 files and directories currently installed.)\n",
-            "Preparing to unpack .../python3-setuptools_59.6.0-1.2ubuntu0.22.04.1_all.deb ...\n",
-            "Unpacking python3-setuptools (59.6.0-1.2ubuntu0.22.04.1) ...\n",
-            "Selecting previously unselected package python3-wheel.\n",
-            "Preparing to unpack .../python3-wheel_0.37.1-2ubuntu0.22.04.1_all.deb ...\n",
-            "Unpacking python3-wheel (0.37.1-2ubuntu0.22.04.1) ...\n",
-            "Selecting previously unselected package python3-pip.\n",
-            "Preparing to unpack .../python3-pip_22.0.2+dfsg-1ubuntu0.3_all.deb ...\n",
-            "Unpacking python3-pip (22.0.2+dfsg-1ubuntu0.3) ...\n",
-            "Setting up python3-setuptools (59.6.0-1.2ubuntu0.22.04.1) ...\n",
-            "Setting up python3-wheel (0.37.1-2ubuntu0.22.04.1) ...\n",
-            "Setting up python3-pip (22.0.2+dfsg-1ubuntu0.3) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  python3.7-lib2to3\n",
-            "The following NEW packages will be installed:\n",
-            "  python3.7-distutils python3.7-lib2to3\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 22 not upgraded.\n",
-            "Need to get 313 kB of archives.\n",
-            "After this operation, 1,229 kB of additional disk space will be used.\n",
-            "Get:1 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 python3.7-lib2to3 all 3.7.17-1+jammy1 [124 kB]\n",
-            "Get:2 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy/main amd64 python3.7-distutils all 3.7.17-1+jammy1 [189 kB]\n",
-            "Fetched 313 kB in 4s (84.5 kB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 2.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package python3.7-lib2to3.\n",
-            "(Reading database ... 122381 files and directories currently installed.)\n",
-            "Preparing to unpack .../python3.7-lib2to3_3.7.17-1+jammy1_all.deb ...\n",
-            "Unpacking python3.7-lib2to3 (3.7.17-1+jammy1) ...\n",
-            "Selecting previously unselected package python3.7-distutils.\n",
-            "Preparing to unpack .../python3.7-distutils_3.7.17-1+jammy1_all.deb ...\n",
-            "Unpacking python3.7-distutils (3.7.17-1+jammy1) ...\n",
-            "Setting up python3.7-lib2to3 (3.7.17-1+jammy1) ...\n",
-            "Setting up python3.7-distutils (3.7.17-1+jammy1) ...\n",
-            "Requirement already satisfied: pip in /usr/lib/python3/dist-packages (22.0.2)\n",
-            "Collecting pip\n",
-            "  Downloading pip-23.3.1-py3-none-any.whl (2.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m18.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pip\n",
-            "\u001b[33m  WARNING: The scripts pip, pip3, pip3.11 and pip3.7 are installed in '/root/.local/bin' which is not on PATH.\n",
-            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
-            "\u001b[0mSuccessfully installed pip-23.3.1\n",
-            "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python --version"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yPDx7Lcg7z_Q",
-        "outputId": "17db1ec4-7e76-49fd-fa7b-04e978d94a87"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Python 3.10.12\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "gZRWEtDzC_zy"
       },
       "source": [
-        "# Next we install gensim\n",
+        "# Install gensim\n",
         "\n",
         "!pip install -q gensim"
       ],
